--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"@mui/icons-material": "^5.15.14",
 		"@mui/material": "^5.15.14",
 		"@mui/styled-engine-sc": "^6.0.0-alpha.18",
+		"@mui/x-charts": "^7.1.1",
 		"axios": "^1.6.8",
 		"lodash": "^4.17.21",
 		"node-sass": "^9.0.0",
